# rinha-backend-2024-q1

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-dev.yml  docker-compose-local.yml  nginx.conf
.sqlx/: query-39787b1bd1b2146495f7c8b76783d7fd5e47d608714e1210c4ff380184f3618f.json  query-3b7b565a0655805ee93a8e67468bafd9234d8e099f1efff57dab37f1dd0acc55.json  query-439658ddd1d91abb31113c62a9721273c6a45755da084e9b62efcee5fb6728ac.json  query-6ee8266a243c06071ae0b009e45e1deae7a66d7e13a58709d0365ba3af670660.json  query-79f70425895f96087c7efdaaad2b0d1a60160bb5bbce220d99edd4cad0420b50.json  query-d2ec08a07102f008b4a16f82203a2ebb1fb4e0dd4fb8e0e86a2e114db7376288.json
db/: 20240206002504_init_rinha.sql
load-test/user-files/simulations/rinhabackend/: RinhaBackendCrebitosSimulation.scala
migrations/: 20240206002504_clients.sql  20240206004700_transactions.sql
src/: database.rs  error.rs  errors.rs  main.rs  models.rs  requests.rs  responses.rs  routes.rs
src/models/: client.rs  transaction.rs
src/requests/: transactions.rs
src/responses/: client.rs  extrato.rs
src/routes/: transactions.rs
submission/: 001_init_rinha.sql  README.md  docker-compose.yml
