[package]
name = "rinha-backend-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "chrono"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
axum = "0.7.4"
chrono = { version = "0.4.34", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
